# Siren

./: .env  .firebaserc  .gitignore  .travis.yml  Makefile  Project.xcconfig  Readme.md  asd  config-overrides.js  config.make  database.rules.json  deph.tidal  experiments.tidal  experimentsc.scd  index.html  main.js  package-lock.json  package.json  rename-samples-folder.js  siren.bat  siren.sh  sync.hi  sync.hs  toDO.txt
SuperCollider.app/Contents/: Info.plist  PkgInfo
config/: .#config.json  config.js  config.json  generated_config.json  index.js  scd-start-default.scd  tidal-boot-default.hs
config/default/: RMdefs.scd  RMfx.scd  config.json  initials.scd  multitrack.scd  multitrackclose.scd  scd-start-default.scd  tidal-boot-default.hs
config/user/: config.json  tidal-boot-user.hs
patterns/: canpat.tidal  scenepat.tidal
public/: index.html  tworker.js
samples/kits_kawai_r50-2/: BASSELEC.aif  BASSFNK1.aif  BASSFNK2.aif  BD1_ELEC.aif  BD2_REV.aif  BD3_ACOU.aif  CLAP_1.aif  CLAP_2.aif  CLICK_1.aif  CLICK_2.aif  CLICK_3.aif  CRASH.aif  ETOM_H.aif  ETOM_L.aif  ETOM_M.aif  FLANGED.aif  HAT_C1.aif  HAT_C2.aif  HAT_C3.aif  HAT_C4.aif  HAT_C5.aif  HAT_O1.aif  HAT_O2.aif  (+17 more)
server/: app copy.js  app.js  config.json  errorHandler.js  start.js  sync.hs  trig_roll.py
shader_trial/: Filters.pde  OSC.pde  Shaders.pde  shader_trial.pde
src/: electron-wait-react.js  index.css  index.js  keyFunctions.js  package.json  store.js
src copy/: index.js  keyFunctions.js
sync/: sync.hs
vc-function/: README.md  stack.yaml  vc-function.cabal
vis/: ProcessingOSC.hs  test.tidal  tidal-processing-osc.cabal
vis/ProcessingClient/: OSC.pde  ProcessingClient.pde
vis/Python/PythonClient/: PythonClient.py  fps_demo.py
vis/PythonClient/: FPS.py  WebcamVideoStream.py
vis/SuperColliderClient/: dxSevenOSC.hs  dxseven.cabal
vis/Unity/: UnityOSC.hs  tidal-unity-osc.cabal
(+262 files in other folders)
