name:                tidal-processing-osc
version:             0.0.1
synopsis:            custom tidal module
license:             GPL-3
author:              Mert Toka
maintainer:          Mert Toka <merttoka92@gmail.com>
Stability:           Experimental
Copyright:           (c) Mike Hodnick, 2016
category:            Sound
build-type:          Simple
cabal-version:       >=1.4

Description: Custom Tidal OSC for Processing

library
  Exposed-modules: ProcessingOSC

  Build-depends: base < 5, tidal
