name:                tidal-processing-osc
version:             0.0.1
synopsis:            custom tidal module
license:             GPL-3
author:              Can Ince
maintainer:          Can Ince <can@ince.io>
Stability:           Experimental
Copyright:           (c) Mike Hodnick, 2016
category:            Sound
build-type:          Simple
cabal-version:       >=1.4

Description: Custom Tidal OSC for Dx7 Synthdef

library
  Exposed-modules: DxSevenOSC

  Build-depends: base < 5, tidal
